=================
Changes for Crate
=================

Unreleased
==========

 - Allow creating the CrateClient with settings and servers at the same time

 - Updated crate-admin to 0.16.1 which includes following changes:

   - fix: column headers where not shown in result table on console page
     when two or more columns with the same name were selected

 - Fix: insert into a partitioned primary key column of type long
   could fail under some circumstances

 - Fix: missing characters when concatinating string under some
   rare circumstances

 - Internal optimization: Avoid writing partition values to the source.

 - Expose shard recovery information in sys.shards table

 - Expose relocating shards in sys.shards table
   Note that relocating shards are shown additionally to their already assigned
   source shards.

 - Removed the limitation that all selected columns must also appear in the
   ORDER BY clause for joins.

 - Updated crate certificates in the ssl truststore.

 - Added support for explicit INNER JOIN .. ON syntax.

 - Fixed an issue that could cause bulk update requests to fail if the
   ``bulkArgs`` contained only one item

 - added os and jvm infos to sys.nodes table

 - sort columns in ``sys`` and `` information_schema`` tables
   alphabetically when selecting all columns with ``*``

2015/11/16 0.53.0
=================

 - Updated crate-admin to 0.16.0 which includes following changes:

   - The table list is now fully searchable and sorted by table name within
     its schemas.

   - fix: charts are not correctly displayed in Microsoft Edge browser.

   - UDC: identify anonymous user with cluster id.
     Both user id and cluster id are anonymous traits.
     Note: You can disable UDC via the `udc.enabled` setting on the Crate server.

 - implement ``intersects`` scalar function

 - fix: properly restrict partitioned by columns to primitive types
        during analysis

 - added functionality to index and match geo shapes
